--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1>The University of Lahore</h1><br>
         <hr>
         <h2>Department Of Technology</h2>
+        <h3>Embeded Lab</h3>
     </div>
     <div>
         <a href="mailto:jawadbaloch136@gmail.com">jawadbaloch136@gmail.com</a><br>
