--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-10">
+    <meta charset="UTF-12">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UOL</title>
@@ -12,6 +12,7 @@
         <h1>The University of Lahore</h1><br>
         <hr>
         <h2>Department Of Technology</h2>
+        <h2>Machine Learning operations</h2>
         <h3>Embeded Lab</h3>
     </div>
     <div>
