--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h2>Department Of Technology</h2>
         <h2>Machine Learning operations</h2>
         <h3>Embeded Lab</h3>
+        <p>Shamsher</p>
     </div>
     <div>
         <a href="mailto:jawadbaloch136@gmail.com">jawadbaloch136@gmail.com</a><br>
